[B]3.0.8~nightly3[/B]
- Fix nach Personen suchen im QuickSearch Dialog

[B]3.0.8~nightly2[/B]
- Anzeigen, auch englischer Streams von s.to

[B]3.0.8~nightly1[/B]
- Fix für cfscrape 
kinoger, cine, stream-to laufen mit dem neuen cfscrape

[B]3.0.7[/B]
  03.02.2019
- Downgrade auf Stand von v3.0.5 (Da sich wahrscheinlich ein Fehler in v3.0.6 eingeschlichen hat)
- Offline Seiten entfernt
  view4u.co, szene-streamz.com, movie2k.st
- [settings.xml] Menü neu geordnet und neu Strukturiert
- Fix settings.xml Menü Bug
- Update source_faultlog Url

  Entfernt:
  - UpNext Funktion im Lastship Menue
  - Anzeigen, auch englischer Streams von s.to

[B]3.0.6[/B]
  01.02.2019
- Anzeigen, auch englischer Streams von s.to
- Offline Seiten entfernt
  view4u.co, szene-streamz.com, movie2k.st
- [settings.xml] Menü neu geordnet und neu Strukturiert
- Fix settings.xml Menü Bug
- add UpNext Funktion (nur Kodi18) in Lastship 
  Das Addon UpNext muss aber seperat installiert werden
  Funktioniert wie das alte NextUp Notification. Einstellung angelegt auf 90sek. Restzeit
  Im UpNext Addon müssen Wiedergabelisten aktiviert sein und Serien müssen per "Ab hier abspielen" gestartet werden
NUR Serien!

[B]3.0.5[/B]
  28.01.2019
- Downloadfunktion Bugfix (Benennung auf Deutsch und Umlaute)
- Fix Amazon (deutsche Tonspur)

[B]3.0.4[/B]
  13.01.2019
- Hompagelink aktualisiert
- Fix Trailer abspiel Probleme
- Beliebige IMDB Listen hinzufügen (lastship.py, movies.py, navigator.py, settings.xml)
	Es ist nun möglich beliebige IMDB-Listen mit ihren IDs (z.B. ls123456789) unter Einstellungen einzutragen und zu 
	benennen
	Der Punkt „IMDB-Listen“ erscheint dann in der Kategorienübersicht der Filme. Standardsortierung ist immer die Sortierung 
	der Liste
	Die Einstellung befindet sich unter „Allgemein“ und ist Standardmäßig deaktiviert
	
[B]3.0.3.0[/B]
  03.01.2019
- Update fixzipfile (damit das nightly Update auf Android funktioniert)

[B]3.0.2.9[/B]
  30.12.2018
- Update fixzipfile