@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.lastship" version="3.0.8~nightly3" name="Lastship" provider-name="Lastship">
+<addon id="plugin.video.lastship" version="3.0.8~nightly4" name="Lastship" provider-name="Lastship">
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
 		<import addon="repository.lastship" version="1.0.2" />
@@ -30,6 +30,7 @@
 - Fix für cfscrape 
 kinoger, cine, stream-to laufen mit dem neuen cfscrape
 - Anzeigen, auch englischer Streams von s.to
+- Update cfscrape
 		</news>
 	</extension>
 </addon>
