@@ -1,3 +1,6 @@
+[B]3.0.8~nightly4[/B]
+- Update cfscrape
+
 [B]3.0.8~nightly3[/B]
 - Fix nach Personen suchen im QuickSearch Dialog
 
